ChatPatrolModule small fixes